Настройка соединения с БД

--- a/build.gradle
+++ b/build.gradle
@@ -61,7 +61,7 @@ dependencies {
 
 }
 
-def hsql = 'org.hsqldb:hsqldb:2.2.9'
+def postgres = 'org.postgresql:postgresql:9.4.1212'
 
 configure([globalModule, coreModule, guiModule, webModule]) {
     apply(plugin: 'java')
@@ -99,8 +99,8 @@ configure(coreModule) {
     dependencies {
         compile(globalModule)
         provided(servletApi)
-        jdbc(hsql)
-        testRuntime(hsql)
+        jdbc(postgres)
+        testRuntime(postgres)
 
     }
 
@@ -121,19 +121,19 @@ configure(coreModule) {
     }
 
     task createDb(dependsOn: assembleDbScripts, description: 'Creates local database', type: CubaDbCreation) {
-        dbms = 'hsql'
-        host = 'localhost'
+        dbms = 'postgres'
+        host = '10.10.1.50'
         dbName = 'sawarecea'
-        dbUser = 'sa'
-        dbPassword = ''
+        dbUser = 'postgres'
+        dbPassword = '20071995'
     }
 
     task updateDb(dependsOn: assembleDbScripts, description: 'Updates local database', type: CubaDbUpdate) {
-        dbms = 'hsql'
-        host = 'localhost'
+        dbms = 'postgres'
+        host = '10.10.1.50'
         dbName = 'sawarecea'
-        dbUser = 'sa'
-        dbPassword = ''
+        dbUser = 'postgres'
+        dbPassword = '20071995'
     }
 }
 
